# mit-6.824-labs

./: Cargo.toml
mr-common/: Cargo.toml
mr-common/src/: lib.rs
mr-master/: Cargo.toml
mr-master/src/: main.rs  master.rs
mr-sequential/: Cargo.toml
mr-sequential/src/: main.rs
mr-worker/: Cargo.toml
mr-worker/src/: main.rs  worker.rs
