[package]
name = "mr-master"
version = "0.1.0"
authors = ["aeryz <abdullaheryz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srpc = { git = "https://github.com/aeryz/srpc", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.3", features = ["full"] }
mr-common = { version = "0.1", path = "../mr-common" }
rand = "0.8"
